--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {margin: 20px 0px;display: flex;flex-direction: column;align-items: center;
 .min-hand {height: 3px;}
 .hour-hand {height: 5px;}
 h1 {text-align: center;font-size: 7rem;position: relative;color: #f0ffda;text-shadow: 13px 10px 0px #020202;}
-h1:before {content: 'Javascript Alarm Clock';width: 100%;height: 100%;text-shadow: 9px 0px 0px #0c4429;position: absolute;left: 0;}
+h1:before {content: 'JavaScript Alarm Clock';width: 100%;height: 100%;text-shadow: 9px 0px 0px #0c4429;position: absolute;left: 0;}
 label.switch {position: relative;max-width: 60px;height: 34px;width: 100%;}
 .switch input {opacity: 0;width: 0;height: 0;}
 span.slider-round {background-color: #ccc;position: absolute;width: 100%;height: 100%;cursor: pointer;transition: 0.4s ease-in-out;border-radius: 34px;top: 0;left: 0;bottom: 0;right: 0;}
